third_party/move/move-compiler-v2/tests/ability-checker/invalid_struct_def.exp

Diagnostics:
error: Invalid instantiation
  ┌─ tests/ability-checker/invalid_struct_def.move:4:15
  │
4 │     struct Bar { x: Foo<u8> }
  │                  ^

error: Invalid instantiation
  ┌─ tests/ability-checker/invalid_struct_def.move:6:18
  │
6 │     struct Baz<T> { x: Foo<T> }
  │                     ^

error: field must have store ability because InValidHasKey is declared with key
   ┌─ tests/ability-checker/invalid_struct_def.move:15:6
   │
15 │         x: HasKey
   │            ^^^^^^
